[gd_scene load_steps=4 format=2]

[ext_resource path="res://hud/SignPostPopup.gd" type="Script" id=1]
[ext_resource path="res://hud/Text.tscn" type="PackedScene" id=2]
[ext_resource path="res://menus/buttons/Button.tscn" type="PackedScene" id=3]

[node name="SignPostPopup" type="Popup"]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextEdit" type="TextEdit" parent="."]
margin_right = 100.0
margin_bottom = 40.0

[node name="RichTextLabel" parent="." instance=ExtResource( 2 )]
margin_right = 100.0

[node name="EditSignButton" parent="." instance=ExtResource( 3 )]
margin_left = 30.0
margin_top = 48.0
margin_right = 65.0
margin_bottom = 68.0
text = "Edit"

[connection signal="about_to_show" from="." to="." method="_on_SignPostPopup_about_to_show"]
[connection signal="popup_hide" from="." to="." method="_on_SignPostPopup_popup_hide"]
[connection signal="pressed" from="EditSignButton" to="." method="_on_EditSignButton_pressed"]
